--- a/ChurchResourceManagerWeb/Views/Membership/_contactInformationReadOnly.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_contactInformationReadOnly.cshtml
@@ -1,8 +1,8 @@
 ﻿    <div style="padding-bottom: 1%;">
         <uib-accordion close-others="false">
-            <div uib-accordion-group class="panel-default" is-open="cic.accordionSettings.isContactInfoOpen">
+            <div uib-accordion-group class="panel-default" is-open="contactInfo.IsContactInfoPanelOpen">
                 <uib-accordion-heading>
-                    Contact Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': cic.accordionSettings.isContactInfoOpen, 'glyphicon-chevron-up': !cic.accordionSettings.isContactInfoOpen}"></i>
+                    Contact Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': contactInfo.IsContactInfoPanelOpen, 'glyphicon-chevron-up': !contactInfo.IsContactInfoPanelOpen}"></i>
                 </uib-accordion-heading>
                 <div class="col-xs-6">
                     <div class="read-only-padding">
