--- a/ChurchResourceManagerWeb/Views/Membership/_memberInformationReadOnly.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_memberInformationReadOnly.cshtml
@@ -1,8 +1,8 @@
 ﻿        <div style="padding-bottom: 1%;">
             <uib-accordion close-others="false">
-                <div uib-accordion-group class="panel-default" is-open="true">
+                <div uib-accordion-group class="panel-default" is-open="memberInfo.IsMemberInfoPanelOpen">
                     <uib-accordion-heading>
-                        Member Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': mic.accordionSettings.isMemberInfoOpen, 'glyphicon-chevron-up': !mic.accordionSettings.isMemberInfoOpen}"></i>
+                        Member Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': memberInfo.IsMemberInfoPanelOpen, 'glyphicon-chevron-up': !memberInfo.IsMemberInfoPanelOpen}"></i>
                     </uib-accordion-heading>
                     <div class="col-xs-12">
                         <div class="read-only-padding">
@@ -14,9 +14,9 @@
                             <div id="relationshipTypes">{{mic.memberInfo.SelectedRelationshipType.Description}}</div>
                         </div>
                     </div>
-                    <div uib-accordion-group class="panel-default" is-open="mic.accordionSettings.isPersonalInfoOpen">
+                    <div uib-accordion-group class="panel-default" is-open="memberInfo.IsPersonalInfoPanelOpen">
                         <uib-accordion-heading>
-                            Personal Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': mic.accordionSettings.isPersonalInfoOpen, 'glyphicon-chevron-up': !mic.accordionSettings.isPersonalInfoOpen}"></i>
+                            Personal Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': memberInfo.IsPersonalInfoPanelOpen, 'glyphicon-chevron-up': !memberInfo.IsPersonalInfoPanelOpen}"></i>
                         </uib-accordion-heading>
                         <div class="col-xs-6">
                             <div class="read-only-padding">
