--- a/ChurchResourceManagerWeb/Views/Membership/_family.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_family.cshtml
@@ -15,10 +15,10 @@
         </div>
     </div>
     <div>
-        <button id="editFamilyBtn" name="editFamilyBtn" class="btn btn-primary" type="button" ng-click="fc.edit()" ng-disabled="fc.beingEdited">
+        <button id="editFamilyBtn" name="editFamilyBtn" class="btn btn-primary" type="button" ng-click="fc.edit()" ng-if="!fc.beingEdited">
             <span class="glyphicon glyphicon-edit"></span> Edit
         </button>
-        <button id="submitFamilyBtn" name="submitFamilyBtn" class="btn btn-primary" type="submit" ng-disabled="!fc.beingEdited">
+        <button id="submitFamilyBtn" name="submitFamilyBtn" class="btn btn-primary" type="submit" ng-if="fc.beingEdited">
             <span class="glyphicon glyphicon-check"></span> Save
         </button>
     </div>
