--- a/ChurchResourceManagerWeb/Views/Membership/_contactInformationReadOnly.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_contactInformationReadOnly.cshtml
@@ -25,7 +25,7 @@
             </div>
         </uib-accordion>
         <div style="padding-top: 1%; padding-left: .5%;" ng-if="cic.activeIndex">
-            <button id="editFamilyBtn" name="editFamilyBtn" class="btn btn-primary" type="button" ng-click="cic.edit()" ng-disabled="cic.beingEdited">
+            <button id="editFamilyBtn" name="editFamilyBtn" class="btn btn-primary" type="button" ng-click="cic.onEdit()" ng-disabled="cic.beingEdited">
                 <span class="glyphicon glyphicon-edit"></span> Edit
             </button>
         </div>
