--- a/ChurchResourceManagerWeb/Views/Membership/_memberInformationReadOnly.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_memberInformationReadOnly.cshtml
@@ -52,7 +52,7 @@
         </div>
     </uib-accordion>
     <div style="padding-top: 1%; padding-left: .5%;" ng-show="mic.activeIndex">
-        <button id="editFamilyBtn" name="editFamilyBtn" class="btn btn-primary" type="button" ng-click="mic.edit()" ng-disabled="mic.beingEdited">
+        <button id="editFamilyBtn" name="editFamilyBtn" class="btn btn-primary" type="button" ng-click="mic.onEdit()" ng-disabled="mic.beingEdited">
             <span class="glyphicon glyphicon-edit"></span> Edit
         </button>
     </div>
