--- a/ChurchResourceManagerWeb/Views/Membership/_membersGrid.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_membersGrid.cshtml
@@ -43,7 +43,7 @@
                             <td class="text-center">{{member.Gender}}</td>
                             <td>{{member.MembershipStatus}}</td>
                             <td>
-                                <span ng-click="mgc.editMember(offering, $index)" uib-tooltip="Click to Edit" class="glyphicon glyphicon-pencil clickable"></span>
+                                <span ng-click="mgc.edit(member)" uib-tooltip="Click to Edit" class="glyphicon glyphicon-pencil clickable"></span>
                                 @*|*@
                                 @*<span ng-click="mgc.deleteMember(offering.OfferingId)" uib-tooltip="Click to Delete" class="glyphicon glyphicon-remove clickable"></span>*@
                             </td>
