Added Update functionality

--- a/ChurchResourceManagerWeb/Views/Membership/MembersSearch.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/MembersSearch.cshtml
@@ -7,6 +7,6 @@
 <h2>@ViewBag.Title</h2>
 
 <div ng-controller="membershipController as mc">
-    <members-grid open-edit-modal="mc.openEditMembershipModal(member)"></members-grid>
+    <members-grid open-edit-modal="mc.openEditMembershipModal(member)" get-member-search-data="mc.getMemberSearch()" members="mc.members"></members-grid>
 </div>
 
