--- a/ChurchResourceManagerWeb/Views/Membership/_editMembershipModal.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_editMembershipModal.cshtml
@@ -14,9 +14,9 @@
                            member-info-array="emc.memberInfoArray"
                            contact-info="emc.contactInfo"
                            on-edit="mc.doEdit(formName)"
-                           on-submit="mc.doSave(formName, formData)"
+                           on-submit="emc.doSave(formName, formData)"
                            state-list="emc.stateList"
-                           on-find-active-index="mc.findActiveIndex(currentIndex, arrayCount)"
+                           on-find-active-index="emc.findActiveIndex(currentIndex, arrayCount)"
                            is-edit-mode="true">
 
         </manage-membership>
