--- a/ChurchResourceManagerWeb/Views/Membership/_contactInformationReadOnly.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_contactInformationReadOnly.cshtml
@@ -1,32 +1,33 @@
-﻿    <div style="padding-bottom: 1%;">
-        <uib-accordion close-others="false">
-            <div uib-accordion-group class="panel-default" is-open="contactInfo.IsContactInfoPanelOpen">
-                <uib-accordion-heading>
-                    Contact Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': contactInfo.IsContactInfoPanelOpen, 'glyphicon-chevron-up': !contactInfo.IsContactInfoPanelOpen}"></i>
-                </uib-accordion-heading>
-                <div class="col-xs-6">
-                    <div class="read-only-padding">
-                        <label for="homePhoneNumber">Home Phone Number</label>
-                        <div id="homePhoneNumber">{{cic.contactInfo.HomePhoneNumber}}</div>
-                    </div>
-                    <div class="read-only-padding">
-                        <label for="cellPhoneNumber">Cell Phone Number</label>
-                        <div id="cellPhoneNumber">{{cic.contactInfo.CellPhoneNumber}}</div>
-                    </div>
-                    <div class="read-only-padding">
-                        <label for="email">Email</label>
-                        <div id="email">{{cic.contactInfo.Email}}</div>
-                    </div>
-                    <div class="read-only-padding">
-                        <label for="preferredContactMethod">Preferred Contact Method</label>
-                        <div id="preferredContactMethod">{{cic.contactInfo.SelectedPreferredContactMethod.Description}}</div>
-                    </div>
+﻿<div style="padding-bottom: 1%;">
+    <uib-accordion close-others="false">
+        <div uib-accordion-group class="panel-default" is-open="contactInfo.IsContactInfoPanelOpen">
+            <uib-accordion-heading>
+                Contact Information - {{contactInfo.Name}}
+                <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': contactInfo.IsContactInfoPanelOpen, 'glyphicon-chevron-up': !contactInfo.IsContactInfoPanelOpen}"></i>
+            </uib-accordion-heading>
+            <div class="col-xs-6">
+                <div class="read-only-padding">
+                    <label for="homePhoneNumber">Home Phone Number</label>
+                    <div id="homePhoneNumber">{{cic.contactInfo.HomePhoneNumber}}</div>
+                </div>
+                <div class="read-only-padding">
+                    <label for="cellPhoneNumber">Cell Phone Number</label>
+                    <div id="cellPhoneNumber">{{cic.contactInfo.CellPhoneNumber}}</div>
+                </div>
+                <div class="read-only-padding">
+                    <label for="email">Email</label>
+                    <div id="email">{{cic.contactInfo.Email}}</div>
+                </div>
+                <div class="read-only-padding">
+                    <label for="preferredContactMethod">Preferred Contact Method</label>
+                    <div id="preferredContactMethod">{{cic.contactInfo.SelectedPreferredContactMethod.Description}}</div>
                 </div>
             </div>
-        </uib-accordion>
-        <div style="padding-top: 1%; padding-left: .5%;" ng-if="cic.activeIndex">
-            <button id="editFamilyBtn" name="editFamilyBtn" class="btn btn-primary" type="button" ng-click="cic.onEdit()" ng-disabled="cic.beingEdited">
-                <span class="glyphicon glyphicon-edit"></span> Edit
-            </button>
         </div>
+    </uib-accordion>
+    <div style="padding-top: 1%; padding-left: .5%;" ng-if="cic.activeIndex">
+        <button id="editFamilyBtn" name="editFamilyBtn" class="btn btn-primary" type="button" ng-click="cic.onEdit()" ng-disabled="cic.beingEdited">
+            <span class="glyphicon glyphicon-edit"></span> Edit
+        </button>
     </div>
+</div>
